# pomowise

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: FONT_TEMPLATE.md  THEME_TEMPLATE.md
docs/plans/: 2026-01-31-pomowise-redesign.md
installer/: README.md  package-lock.json  package.json
installer/assets/: logo.txt
installer/lib/: detect.js  rust.js  setup.js  ui.js
npm/: package.json
npm/scripts/: install-binary.js  uninstall.js
src/: app.rs  ipc.rs  lib.rs  main.rs  notification.rs  scaling.rs  timer.rs
src/animation/: digit_fonts.rs  digits.rs  mod.rs
src/animation/themes/: aurora.rs  bubbles.rs  claude.rs  dna.rs  electric.rs  fire.rs  fireworks.rs  geometric.rs  github.rs  glitch.rs  landscape.rs  matrix.rs  medieval.rs  minimal.rs  mod.rs  nature.rs  ocean.rs  plasma.rs  rain.rs  seasonal.rs  shapes.rs  snowfall.rs  starfield.rs  synthwave.rs  waves.rs
src/ui/: menu.rs  mod.rs  timer_view.rs
src/ui/widgets/: mod.rs
